# ai-harness-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  init.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: install.md
agents/: navigator.md  test-designer.md  topology.yaml
commands/: evaluate.md  evolve.md  install.md  interview.md  pm.md  rollback.md  run.md  seed.md  trd.md
docs/: CODEBASE-GUIDE.md  methodology-catalog.md  methodology-guide.md
feedback/: evolve-rules.md
gates/: GATES.md  check-ai-antipatterns.sh  check-boundaries.sh  check-complexity.sh  check-layers.sh  check-mutation.sh  check-performance.sh  check-secrets.sh  check-security.sh  check-spec.sh  check-structure.sh  check-surgical-changes.sh  install-hooks.sh
lib/: detect-stack.sh  render-template.sh
methodology/: _registry.yaml
pro/: README.md  install.sh  pyproject.toml
pro/hooks/: drift-monitor.py  hooks.json  keyword-detector.py  session-start.py
pro/src/harness_pro/: __init__.py  cli.py
pro/src/harness_pro/drift/: monitor.py
pro/src/harness_pro/evaluation/: pipeline.py
pro/src/harness_pro/interview/: engine.py
pro/src/harness_pro/mcp/: server.py
pro/src/harness_pro/observability/: tracer.py
pro/src/harness_pro/ontology/: extractor.py
pro/src/harness_pro/persistence/: store.py
pro/src/harness_pro/scoring/: ambiguity.py
pro/src/harness_pro/testing/: scaffold.py
scripts/: migrate-v2.sh
templates/: CLAUDE.md.hbs  adr.yaml  architecture-invariants.md.hbs  github-actions-gates.yaml
(+141 files in other folders)
